(Scott Yeadon)
- Jar file updates (includes required code changes for DSIndexer and DSQuery and new jars
  fontbox.jar and serializer.jar)

(Stuart Lewis and Rob Tansley)
- SF Patch #1587225 Google and html sitemap generator

(Vlastimil Krejcir)
- SF patch #1588008 Bitstream authorization timeout patch

(Claudia Juergen)
- SF patch 1578936 for SF bug #1066771 Metadata edit form dropping DC qualifier
- removed reference to "Local DSpace Administrator Contact Information" in
  docs/index.html
  docs/configure.html
- added a note about contact info in "The Wording of E-Mails" in
  docs/configure.html
- config/registries/dublin-core-types.xml replaced deprecated reference to org.dspace.administer.DCType.java 
  with the reference to the appropriate org.dspace.content.Metadata... classes
- docs/configure.html
  updated "The Dublin Core and Bitstream Format Registries" for multiple metadata schemas
- docs/appenx.html
  added overviews of the default Dublin Core Metadata and Bitstream Registry
- SF patch #1584297 for SF bug #1548738 Multiple Metadata Schema, schema not shown on edit item page

(Robert Tansley)
- SF patch #1565975 HandleServlet and BitstreamServlet support If-Modified-Since
  requests

(Bernadette Schlonsok)
- SF patch #1490857  XHTML Compliance of 1.4 alpha 1
- minor changes for XHTML/WAI compliance of controlled vocabularies addon
- minor changes for XHTML compliance of suggest item feature
- minor changes for XHTML compliance

(Larry Stone)
- SF patch #1544273 improved sanity-checking of XSL-based ingest crosswalks
- SF patch #1484260 another doc update for SSL, tomcat, mod_jk + config fix
- SF patch #1521625  documentation updates for 1.4

(Dorothea Salo)
- SF patch #1544124 Remove admin email from contact info
- SF patch #1533133 Remove thumbnail filename from alt-text
- SF patch #1533114 Item title in HTML <title>
- SF patch #1584035 Prevent sploggers from using feedback page

(Jeroen Ruigrok)